# archive-hr-news

./: .gitignore  code.js  pyproject.toml  readme.md
.github/workflows/: lint-and-format.yml
apps_script/: appsscript.json  code.js  readme.md
entity_extractor/: __init__.py  cli.py  models.py  ner.py  parsers.py  readme.md  wikidata.py
entity_extractor/tests/: __init__.py  test_cli.py  test_models.py  test_ner.py  test_parsers.py  test_wikidata.py
entity_extractor/tests/fixtures/: multipart_email.eml  newline_entities.eml  simple_email.html  test_email.eml  test_email.html
