[project]
name = "entity-extractor"
version = "0.1.0"
description = "Extract named entities from emails using spaCy NER"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "spacy>=3.7.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
]

[project.scripts]
extract-entities = "entity_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
