[project]
name = "entity-extractor"
version = "0.1.0"
description = "Extract named entities from emails using spaCy NER"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "spacy==3.8.14",
    "rich==15.0.0",
    "click==8.3.3",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "requests==2.33.1",
]

[project.scripts]
extract-entities = "entity_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.12",
]
